# hobbies

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sbt  color.h  main.cpp  vec3.h
16_texture/: Application.cpp  Application.h  CMakeLists.txt  Command.cpp  Command.h  Swapchain.cpp
16_texture/shaders/: frag.spv  shader.vert
18_load_model/: Application.cpp  Application.h  CMakeLists.txt
18_load_model/shaders/: frag.spv
19_mipmap/: Application.cpp  Application.h  CMakeLists.txt  Command.h  Swapchain.cpp
19_mipmap/shaders/: shader.frag
cairo/pango/font/: CMakeLists.txt
cairo/pango/hello/: CMakeLists.txt  main.cpp
d3d/06_swap_chain/: CMakeLists.txt  D3DEngine.cpp
d3d/08_custom_debug/: CMakeLists.txt  D3DEngine.cpp
d3d/10_shaders/: CMakeLists.txt
d3d/14_load_texture/: CMakeLists.txt  D3DEngine.cpp
d3d/18_frame_buffering/: CMakeLists.txt  shader.hlsl
d3d/19_depth_resource/: CMakeLists.txt  D3DEngine.h
d3d/25_offscreen/: CMakeLists.txt  D3DEngine.cpp  D3DEngine.h  postprocess.hlsl
d3d/26_offscreen_vertex_id/: CMakeLists.txt  D3DEngine.cpp
d3d/28_msaa/: CMakeLists.txt  D3DEngine.h  Model.h
graphics/qt/hello_qtquick/: CMakeLists.txt  Main.qml  main.cpp
graphics/vulkan/: .gitignore  CMakeLists.txt  README.md
graphics/vulkan/01_hello_glfw/: App.cpp  App.h  CMakeLists.txt  main.cpp
graphics/vulkan/02_create_instance/: App.cpp  CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/03_debug_callback/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/03_phisical_device/: CMakeLists.txt  main.cpp
graphics/vulkan/04_logical_device/: main.cpp
graphics/vulkan/04_physical_device/: CMakeLists.txt
graphics/vulkan/05_logical_device/: App.cpp  CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/06_surface/: CMakeLists.txt  VulkanEngine.h
graphics/vulkan/07_swapchain/: CMakeLists.txt  VulkanEngine.cpp
graphics/vulkan/08_image_view/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/08_pipeline/: main.cpp
graphics/vulkan/09_drawing/: CMakeLists.txt  main.cpp
graphics/vulkan/09_shaders/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/10_pipeline/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h  shader.slang
graphics/vulkan/11_command_buffer/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/11_refactor/: Application.cpp
graphics/vulkan/12_present/: App.cpp  CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/13_recreate_swapchain/: App.h  CMakeLists.txt  VulkanDebug.h  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/14_uniform_buffer/: Application.cpp  CMakeLists.txt
graphics/vulkan/14_vertex_buffer/: CMakeLists.txt  VulkanEngine.cpp  shader.slang
graphics/vulkan/15_refactor2/: CMakeLists.txt
graphics/vulkan/15_staging_buffer/: App.cpp  CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/16_index_buffer/: CMakeLists.txt  VulkanEngine.h
graphics/vulkan/16_texture/: Application.cpp
graphics/vulkan/17_depth/: Application.h
graphics/vulkan/17_uniform_buffer/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/18_refactor/: App.cpp  App.h  CMakeLists.txt  Object.cpp  Object.h  VulkanContext.cpp  VulkanContext.h  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/19_mipmap/: CMakeLists.txt
graphics/vulkan/19_texture/: App.cpp  CMakeLists.txt  Object.cpp  Object.h  VulkanContext.cpp  VulkanEngine.cpp  VulkanEngine.h
graphics/vulkan/20_dynamic_uniform_buffer/: CMakeLists.txt  Object.cpp  Object.h  VulkanContext.cpp  VulkanEngine.h  shader.slang
graphics/vulkan/20_msaa/: Application.cpp
graphics/vulkan/21_buffer_struct/: CMakeLists.txt  Object.cpp  Object.h  VulkanBuffer.h
graphics/vulkan/21_depth/: CMakeLists.txt  Object.h  VulkanDebug.cpp
graphics/vulkan/21_vma/: Application.cpp  CMakeLists.txt  Swapchain.h
graphics/vulkan/22_depth/: CMakeLists.txt  Object.cpp  VulkanContext.h  VulkanEngine.cpp  shader.slang
graphics/vulkan/23_load_models/: CMakeLists.txt  Object.cpp  Object.h  VulkanEngine.cpp  VulkanEngine.h  VulkanHelper.h  shader.slang
graphics/vulkan/24_sdf/: App.cpp  App.h  CMakeLists.txt  Object.cpp  Object.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  VulkanEngine.cpp  VulkanEngine.h  VulkanHelper.h  main.cpp  shader.slang  vertex.slang
graphics/vulkan/24_sdf/shaders/: 00_entries.h  0_base.slang  1_color.slang  circle.slang  ellipse.slang  rect.slang  roundedrect.slang
graphics/vulkan/old/: CMakeLists.txt
graphics/vulkan/old/01_hello_glfw/: CMakeLists.txt
graphics/vulkan/old/10_resize/: main.cpp
graphics/vulkan/old/12_vertex_buffer/: CMakeLists.txt
graphics/vulkan/old/13_index_buffer/: CMakeLists.txt
graphics/vulkan/old/14_uniform_buffer/: CMakeLists.txt
graphics/vulkan/old/15_refactor2/: CMakeLists.txt
graphics/vulkan/old/16_texture/: CMakeLists.txt
graphics/vulkan/old/17_depth/: CMakeLists.txt
graphics/vulkan/old/18_load_model/: CMakeLists.txt
graphics/vulkan/old/19_mipmap/: CMakeLists.txt
graphics/vulkan/old/20_msaa/: CMakeLists.txt
graphics/vulkan/old/21_vma/: Application.cpp  CMakeLists.txt  vma.h
graphics/vulkan/resources/models/: utility_box.mtl
graphics/windows/: CMakeLists.txt  README.md  vcpkg.json
graphics/windows-rs/d3d_01_hello/: Cargo.toml
graphics/windows/fileapi/: CMakeLists.txt  GetDiskFreeSpace.cpp  GetDriveType.cpp  README.md
graphics/windows/toolhelp32/: CMakeLists.txt  heap_info.cpp  module_info.cpp  process_info.cpp  thread_info.cpp
graphics/windows/winbase/: CMakeLists.txt  GetComputerName.cpp  GetUserName.cpp  README.md
graphics/windows/winhttp/: CMakeLists.txt  README.md  SendRequest.cpp
lang/cpp/learning/: CMakeLists.txt  learn.cpp  learn.h  main.cpp  network.h  othello_board.h
lang/java/jni/: CMakeLists.txt
learn/rt1w/: CMakeLists.txt
learn/rt1w/src/: color.h  dielectric.h  hittable_list.h  material.h  metal.h  sphere.cpp  sphere.h  vec3.h
math/linear/: CMakeLists.txt
math/linear/examples/: lib.h  matrix.cpp  quartanion.cpp
math/linear/src/: mat.h  quartanion.h
(+1073 files in other folders)
