cmake_minimum_required(VERSION 3.31)
project(vulkan_playground)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
set(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)

find_package(glfw3 CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(Vulkan REQUIRED)
find_package(VulkanMemoryAllocator CONFIG REQUIRED)

#add_subdirectory(old)
add_subdirectory(01_hello_glfw)
add_subdirectory(02_create_instance)
add_subdirectory(03_debug_callback)
add_subdirectory(04_physical_device)
add_subdirectory(05_logical_device)
add_subdirectory(06_surface)
add_subdirectory(07_swapchain)
add_subdirectory(08_image_view)
add_subdirectory(09_shaders)
add_subdirectory(10_pipeline)
add_subdirectory(11_command_buffer)
add_subdirectory(12_present)
add_subdirectory(13_recreate_swapchain)
add_subdirectory(14_vertex_buffer)
add_subdirectory(15_staging_buffer)
add_subdirectory(16_index_buffer)
add_subdirectory(17_uniform_buffer)
add_subdirectory(18_refactor)