cmake_minimum_required(VERSION 3.30)
project(Win32D2DExamples)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(D3D_RESOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/d3d/resources")
set(THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party")

add_subdirectory(win32/01_hello_world)
add_subdirectory(win32/02_split_class)
add_subdirectory(win32/03_list_system_fonts)
add_subdirectory(win32/04_window_message)
add_subdirectory(win32/05_hello_thread)

add_subdirectory(d2d/01_hello_world)
add_subdirectory(d2d/02_device_context)
add_subdirectory(d2d/03_draw_primitive_geometry)
add_subdirectory(d2d/04_path_geometry)
add_subdirectory(d2d/05_linear_pattern)
add_subdirectory(d2d/06_radical_pattern)

add_subdirectory(d3d/01_hello_world)
add_subdirectory(d3d/02_debug_layer)
add_subdirectory(d3d/03_adapter)
add_subdirectory(d3d/04_create_device)
add_subdirectory(d3d/05_command_queue)
add_subdirectory(d3d/06_swap_chain)
add_subdirectory(d3d/07_present)
add_subdirectory(d3d/08_custom_debug)
add_subdirectory(d3d/09_vertex_buffer)
add_subdirectory(d3d/10_shaders)
add_subdirectory(d3d/11_pipeline)
add_subdirectory(d3d/12_index_buffer)
add_subdirectory(d3d/13_descriptor)
add_subdirectory(d3d/14_load_texture)
add_subdirectory(d3d/15_texture_view)
add_subdirectory(d3d/16_default_heap)
add_subdirectory(d3d/17_more_default)
add_subdirectory(d3d/18_frame_buffering)
add_subdirectory(d3d/19_depth_resource)
add_subdirectory(d3d/20_load_model)
add_subdirectory(d3d/21_transform_matrix)
add_subdirectory(d3d/22_lighting)
add_subdirectory(d3d/23_refactor)
add_subdirectory(d3d/24_multi_path)
add_subdirectory(d3d/25_offscreen)
add_subdirectory(d3d/26_offscreen_vertex_id)
add_subdirectory(d3d/27_multi_render_target)
add_subdirectory(d3d/28_msaa)
add_subdirectory(d3d/29_instancing)
add_subdirectory(d3d/30_d3d12ma)
add_subdirectory(d3d/31_compute_shader)
add_subdirectory(d3d/32_dxr_init)
add_subdirectory(d3d/33_dxr_instance)
add_subdirectory(d3d/34_dxr_model)
add_subdirectory(d3d/35_descriptor_management)

add_subdirectory(dwrite/01_list_system_fonts)
add_subdirectory(dwrite/features)

add_subdirectory(dxgi/show_video_memory)

add_subdirectory(pdh/01_hello_pdh)

add_subdirectory(winrt/capture)

add_subdirectory(winui/cmake-hello)

add_subdirectory(winsock/hello)
add_subdirectory(winsock/udp)
add_subdirectory(winsock/window)

add_subdirectory(xaudio2/hello)
add_subdirectory(xaudio2/3d)

if (ENABLE_OLD)
    add_subdirectory(d2d/z_old/direct2d_1)
    add_subdirectory(d2d/z_old/direct2d_image)
    add_subdirectory(d2d/z_old/direct2d_rendertarget)

    add_subdirectory(dwrite/z_old/direct_write_2)
    add_subdirectory(dwrite/z_old/direct_write_3)
    add_subdirectory(dwrite/z_old/direct_write_all)
    add_subdirectory(dwrite/z_old/direct_write_hello)
    add_subdirectory(dwrite/z_old/direct_write_multistyle)

    add_subdirectory(win32/win32book/bitmap)
    add_subdirectory(win32/win32book/control)
    add_subdirectory(win32/win32book/dialog_modal)
    add_subdirectory(win32/win32book/dialog_modeless)
    add_subdirectory(win32/win32book/graphic_ellipse)
    add_subdirectory(win32/win32book/graphic_lines)
    add_subdirectory(win32/win32book/graphic_points)
    add_subdirectory(win32/win32book/graphic_polygon)
    add_subdirectory(win32/win32book/graphic_rect)
    add_subdirectory(win32/win32book/hello)
    add_subdirectory(win32/win32book/keyboard)
    add_subdirectory(win32/win32book/menu)
    add_subdirectory(win32/win32book/mouse)
    add_subdirectory(win32/win32book/mouse2)
    add_subdirectory(win32/win32book/mouse3)
    add_subdirectory(win32/win32book/sound)
    add_subdirectory(win32/win32book/text)
    add_subdirectory(win32/win32book/text_font)
    add_subdirectory(win32/win32book/toolbar)
endif ()