cmake_minimum_required(VERSION 3.28)

get_filename_component(PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" ABSOLUTE)
get_filename_component(DIRNAME "${PROJECT_DIR}" NAME)
set(PROJECT_NAME "pango_cairo_${DIRNAME}")

project(${PROJECT_NAME})

find_package(PkgConfig REQUIRED)
pkg_check_modules(CAIRO REQUIRED cairo)
pkg_check_modules(PANGO REQUIRED pangocairo)

message("CAIRO_INCLUDE_DIRS: ${CAIRO_INCLUDE_DIRS}")
message("CAIRO_LIBRARIES: ${CAIRO_LIBRARIES}")
message("CAIRO_LIBRARY_DIRS: ${CAIRO_LIBRARY_DIRS}")
message("CAIRO_CFLAGS_OTHER: ${CAIRO_CFLAGS_OTHER}")
message("PANGO_INCLUDE_DIRS: ${PANGO_INCLUDE_DIRS}")
message("PANGO_LIBRARIES: ${PANGO_LIBRARIES}")
message("PANGO_LIBRARY_DIRS: ${PANGO_LIBRARY_DIRS}")
message("PANGO_CFLAGS_OTHER: ${PANGO_CFLAGS_OTHER}")

add_executable(${PROJECT_NAME} main.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ${CAIRO_INCLUDE_DIRS} ${PANGO_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${CAIRO_LIBRARIES} ${PANGO_LIBRARIES})
target_link_directories(${PROJECT_NAME} PRIVATE ${CAIRO_LIBRARY_DIRS} ${PANGO_LIBRARY_DIRS})
target_compile_options(${PROJECT_NAME} PRIVATE ${CAIRO_CFLAGS_OTHER} ${PANGO_CFLAGS_OTHER})
