[package]
name = "d3d_01_hello"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi_Common"
]