cmake_minimum_required(VERSION 3.29)
project(jni CXX)

add_subdirectory(src/access)
add_subdirectory(src/array)
add_subdirectory(src/exception)
add_subdirectory(src/extend)
add_subdirectory(src/hello)
add_subdirectory(src/hello2)
add_subdirectory(src/java_window2/native)
add_subdirectory(src/java_window3/native)
add_subdirectory(src/java_window4/native)
add_subdirectory(src/window)
add_subdirectory(src/windowjava)